--- a/basic/main.css
+++ b/basic/main.css
@@ -1,7 +1,7 @@
 html,
 body {
-    background-color: #999;
-    color: #555;
+    background-color: #dddddd;
+    color: #444;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     margin:0;
